<resources>
    <string name="app_name">calculator</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_sum">+</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_ded">-</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_inc">*</string>
    <string name="button_point">.</string>
    <string name="button_0">0</string>
    <string name="button_res">=</string>
    <string name="button_div">/</string>
    <string name="button_clean">C</string>
    <string name="button_percent">%</string>
    <string name="button_backspace">←</string>
    <string name="btn_theme_Default">themeDefault</string>
    <string name="btn_theme_Red">themeRed</string>
    <string name="btn_theme_Green">themeGreen</string>
    <string name="btn_text_go_to_set_Theme">go_to_set_Theme</string>
    <string name="tex_btn_set_theme">set_Theme</string>
</resources>