<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_column="4"
    android:gravity="bottom"
    android:orientation="horizontal">

    <TableRow

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button1"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_2"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_3"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_sum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_sum"
            android:textSize="20sp" />
    </TableRow>

    <TableRow

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_4"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_5"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_6"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_ded"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_ded"
            android:textSize="20sp" />
    </TableRow>

    <TableRow

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_7"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_8"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_9"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_inc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_inc"
            android:textSize="20sp" />
    </TableRow>

    <TableRow

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_."
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_point"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_0"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_res"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_res"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_div"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_div"
            android:textSize="20sp" />
    </TableRow>
    </TableLayout>
