<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent
"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioBtnThemeDefault"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_theme_Default"
            android:textSize="@dimen/textSize_RadioBtn">

        </com.google.android.material.radiobutton.MaterialRadioButton>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioBtnThemeRed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_theme_Red"
            android:textSize="@dimen/textSize_RadioBtn">

        </com.google.android.material.radiobutton.MaterialRadioButton>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioBtnThemeGreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_theme_Green"
            android:textSize="@dimen/textSize_RadioBtn">

        </com.google.android.material.radiobutton.MaterialRadioButton>

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_Theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tex_btn_set_theme"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>